2004-11-14  Zdenek Dvorak  <dvorakz@suse.cz>

	PR tree-optimization/18431
	* tree-flow.h (stmt_references_memory_p): Declare.
	* tree-ssa-loop-im.c (stmt_cost): Use stmt_references_memory_p.
	* tree-ssa.c (stmt_references_memory_p): New function.

2004-11-14  Andreas Schwab  <schwab@suse.de>

	* Makefile.in (lambda-code.o, tree-loop-linear.o): Depend on
	$(EXPR_H).

2004-11-14  Kazu Hirata  <kazu@cs.umass.edu>

	* c-common.c (walk_stmt_tree): Remove.
	* c-common.h: Remove the corresponding prototype.

	* emit-rtl.c (push_to_full_sequence): Remove.
	* rtl.h: Remove the corresponding prototype.

	* cselib.c, expr.c: Fix comment typos.

2004-11-13  Richard Henderson  <rth@redhat.com>

	* calls.c (precompute_register_parameters): Force all PARALLELs
	into pseudo registers.
	(load_register_parameters): Copy PARALLELs into hard registers.
	* function.c (assign_parm_setup_block): Copy PARALLELS into
	pseudo registers.  Do emit_group_store in conversion_insns.
	* expr.c (emit_group_load_1): Rename from emit_group_load, take
	tmps as an argument.  Move final copy loop ...
	(emit_group_load): ... here.  New function.
	(emit_group_load_into_temps, emit_group_move_into_temps): New.
	* expr.h: Declare them.

2004-11-14  Kazu Hirata  <kazu@cs.umass.edu>

	* tree-cfg.c, tree-if-conv.c, tree-ssa-loop-ivopts.c,
	tree-ssa-loop-manip.c, tree-vectorizer.c: Replace TREE_CHAIN
	with PHI_CHAIN where appropriate.

2004-11-13  Dale Johannesen  <dalej@apple.com>

	* tree-flow.h (bsi_commit_one_edge_insert): Remove name from prototype.
	(tree_block_label): Ditto.
	(flush_pending_stmts): Ditto.
	(insert_edge_copies): Ditto.
	(expr_invariant_in_loop_p): Ditto.
	(TDF_USE_OPS): Parenthesize definition.
	(TDF_USE_VOPS): Ditto.

2004-11-13  David Edelsohn  <edelsohn@gnu.org>

	* config/rs6000/aix51.h (ASM_CPU_SPEC): Add 970 and G5.
	* config/rs6000/aix52.h (ASM_CPU_SPEC): Same.
	* config/rs6000/t-aix52 (BOOT_LDFLAGS): Define.

2004-11-14  Joseph Myers  <joseph@codesourcery.com>
